Reports/Report-5484214.out
---------------------------------------
Begin Slurm Prolog: Apr-02-2024 13:33:29
Job ID:    5484214
User ID:   shardin31
Account:   gts-jw254-coda20
Job name:  Slurmshardinpowderdayrun
Partition: cpu-small
QOS:       inferno
---------------------------------------

CommandNotFoundError: Your shell has not been properly configured to use 'conda deactivate'.
To initialize your shell, run

    $ conda init <SHELL_NAME>

Currently supported shells are:
  - bash
  - fish
  - tcsh
  - xonsh
  - zsh
  - powershell

See 'conda init --help' for more information and options.

IMPORTANT: You may need to close and restart your shell after running 'conda init'.



Lmod is automatically replacing "mvapich2/2.3.6-ouywal" with "openmpi/4.1.4".

  File "analysis_pipeline.py", line 161
    break
    ^
SyntaxError: 'break' outside loop
---------------------------------------
Begin Slurm Epilog: Apr-02-2024 13:33:44
Job ID:        5484214
Array Job ID:  _4294967294
User ID:       shardin31
Account:       gts-jw254-coda20
Job name:      Slurmshardinpowderdayrun
Resources:     cpu=48,mem=100G,node=2
Rsrc Used:     cput=00:12:00,vmem=1512K,walltime=00:00:15,mem=0,energy_used=0
Partition:     cpu-small
QOS:           inferno
Nodes:         atl1-1-02-020-33-2,atl1-1-02-020-34-1
---------------------------------------
